--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -126,6 +126,9 @@ pt-BR:
     like button text:                           "Curtir"
     unlike button text:                         "Desfazer curtir"
   notes:
+    public:                                     "Público"
+    private:                                    "Privado"
+    draft:                                      "Rascunho"
     creation form errors:                       "O(s) seguinte(s) erro(s) impediu(ram) a criação de sua anotação"
     status field:                               "Status:"
     reference field:                            "Referência(s):"
@@ -170,6 +173,8 @@ pt-BR:
     select another chapter:                     "Selecione um Capítulo Diferente"
     view in reader:                             "Ver %{reference} no Leitor"
   users:
+    settings:                                   "Configurações"
+    no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
     creation form errors:                       "O(s) seguinte(s) erro(s) impediu(ram) a criação de sua conta:"
     profile form errors:                        "O(s) seguinte(s) erro(s) impediu(ram) a atualização do seu perfil:"
     email address:                              "Endereço de e-mail"
@@ -188,6 +193,7 @@ pt-BR:
     following title:                            "Pessoas que estou seguindo"
     user does not follow you:                   "%{user} não está te seguindo."
     recent activity:                            "Atividade Recente"
+    my recent_activity:                         "My Recent Activity"
     started following:                          "Passou a Seguir"
     subscribed to plan:                         "Usuários Inscritos ao %{plan}"
     reading:                                    "Usuários Lendo Esse Plano"    
@@ -203,7 +209,6 @@ pt-BR:
     edit notifications:                         "Gerenciar Notificações"
     edit connections:                           "Contas Conectadas"
     edit devices:                               "Dispositivos Conectados"
-    my recent activity:                         "Minha Atividade Recente"
     user recent activity:                       "Atividade Recente de %{user}"
     my notes:                                   "My Notes"
     user notes:                                 "Anotações de %{user}"
@@ -214,12 +219,14 @@ pt-BR:
     user bookmarks:                             "Marcadores de %{user}"
     my likes:                                   "Eu Curto"
     user likes:                                 "%{user} Curte"
+    my badges:                                  "My Badges"
     revised date:                               "Revisado em %{date}"
     update email copy:                          "Insira um novo endereço de e-mail e clique em Atualizar E-mail. Enviaremos um link para que você confirme o seu novo endereço de e-mail."
-    update email button:                        "Atualizar E-mail"
+    edit email:                                 "Atualizar E-mail"
     update email check:                         "Por favor, verifique o seu e-mail e clique no link para confirmar o seu novo endereço de e-mail."
     confirm update email success:               "Obrigado! Você atualizou o seu endereço de e-mail."
     confirm update email error:                 "Desculpe, houve um problema ao completar a mudança do endereço de e-mail."
+    account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "Desculpe, não conseguimos encontrar uma conta com esse endereço de e-mail. Por favor, tente novamente."
     send new password button:                   "Enviar Nova Senha"
     forgot password copy:                       "Insira seu endereço de e-mail e clique em Enviar Nova Senha e enviaremos um e-mail com a nova senha."
@@ -281,8 +288,7 @@ pt-BR:
       international title:                      "Advertências Especiais para o Uso Internacional"
       international text:                       "Reconhecendo a natureza global da Internet, você concorda em seguir todas as regras locais referentes à conduta online e de Conteúdo aceitável. Especificamente, você concorda em seguir todas as leis aplicáveis referentes à transmissão de dados técnicos exportados dos Estados Unidos ou do país onde você reside."
       content title:                            "Conteúdo Submetido ou Disponibilizado para Inclucão no Serviço"
-      content text:                             "LifeChurch.tv não alega propriedade do conteúdo que você submite ou disponibiliza para inclusão no YouVersion. 
-Porém, com relação a conteúdo que você submete ou disponibiliza para inclusão em áreas de acesso público do YouVersion, você concede LifeChurch.tv a licença não exclusiva, mundial, e gratuita, como aplicável: %{line_break} Com relação ao conteúdo que você submete ou disponibiliza para uso em áreas de acesso público do YouVersion, a licença para usar, distribuir, reproduzir, modificar, adaptar, apresentar e exibir públicamente tal conteúdo no YouVersion, para os propósitos de proporcionar e promover a área específica do YouVersion para a qual tal conteúdo foi submetido ou disponibilizado. Esta licença existe apenas pelo período que você decidir incluir tal conteúdo no YouVersion, e terminará quando você ou LifeChurch.tv remover tal conteúdo do YouVersion. %{line_break} Com relação a outros conteúdos que não sejam fotografias, gráficos, áudio, e vídeo que você submeta ou disponibilize para inclusão em áreas de acesso público do YouVersion, a licença perpétua, irrevogável, e completamente sub-licenceável para usar, distribuir, reproduzir, modificar, adaptar, publicar, traduzir, apresentar e exibir publicamente tal conteúdo (em sua totalidade ou em parte) e para incorporar tal conteúdo em outros trabalhos e qualquer formato ou meio agora conhecido ou desenvolvido no futuro.%{line_break} \"De acesso público.\" Áreas \"De acesso público\" do YouVersion são aquelas áreas que são disponíveis ao público em geral. Áreas de acesso público do YouVersion incluem, mas não são limitadas a, message boards, comentários em blogs, áreas comunitárias, e forums que são abertos a membros e visitantes."
+      content text:                             "LifeChurch.tv não alega propriedade do conteúdo que você submite ou disponibiliza para inclusão no YouVersion. Porém, com relação a conteúdo que você submete ou disponibiliza para inclusão em áreas de acesso público do YouVersion, você concede LifeChurch.tv a licença não exclusiva, mundial, e gratuita, como aplicável: %{line_break} Com relação ao conteúdo que você submete ou disponibiliza para uso em áreas de acesso público do YouVersion, a licença para usar, distribuir, reproduzir, modificar, adaptar, apresentar e exibir públicamente tal conteúdo no YouVersion, para os propósitos de proporcionar e promover a área específica do YouVersion para a qual tal conteúdo foi submetido ou disponibilizado. Esta licença existe apenas pelo período que você decidir incluir tal conteúdo no YouVersion, e terminará quando você ou LifeChurch.tv remover tal conteúdo do YouVersion. %{line_break} Com relação a outros conteúdos que não sejam fotografias, gráficos, áudio, e vídeo que você submeta ou disponibilize para inclusão em áreas de acesso público do YouVersion, a licença perpétua, irrevogável, e completamente sub-licenceável para usar, distribuir, reproduzir, modificar, adaptar, publicar, traduzir, apresentar e exibir publicamente tal conteúdo (em sua totalidade ou em parte) e para incorporar tal conteúdo em outros trabalhos e qualquer formato ou meio agora conhecido ou desenvolvido no futuro.%{line_break} \"De acesso público.\" Áreas \"De acesso público\" do YouVersion são aquelas áreas que são disponíveis ao público em geral. Áreas de acesso público do YouVersion incluem, mas não são limitadas a, message boards, comentários em blogs, áreas comunitárias, e forums que são abertos a membros e visitantes."
       contributions title:                      "Contribuições a LifeChurch.tv"
       contributions text:                       "Ao enviar ideias, sugestões, documentos e/ou propostas ('Contribuições') para a LifeChurch.tv, você reconhece e concorda que: %{item}(a) suas Contribuições não contém informações confidenciais ou proprietárias; %{item}(b) LifeChurch.tv não possui obrigação de confidencialidade, expressa ou implícita, com respeito às Contribuições; %{item}(c) LifeChurch.tv terá o direito de utilizar ou divulgar (ou optar não utilizar ou divulgar) tais Contribuições para qualquer finalidade, de qualquer forma, em qualquer mídia em todo o mundo; %{item}(d) LifeChurch.tv pode possuir algo similar às Contribuições já previstas ou em desenvolvimento; %{item}(e) suas Contribuições automaticamente se tornam propriedade da LifeChurch.tv sem qualquer obrigação da LifeChurch.tv com você; e %{item}(f) você não tem direito a qualquer compensação ou reembolso de nenhum tipo da LifeChurch.tv sob nenhuma circunstância."
       indemnity title:                          "Indenização e Liberação de Responsabilidade"
@@ -349,8 +355,11 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
       reading_plans:                            "Notifique-me sobre informações dos planos de leitura que eu tenha iniciado"
       update:                                   "Atualizar Notificações"
   bookmarks:
+    edit:                                       "Editar"
+    delete:                                     "Delete this Bookmark"
     title field:                                "Título"
     lables:                                     "Etiquetas"
+    all:                                        "Todas"
     labels label:                               "Etiquetas:"
     title:                                      "Marcadores"
     not found:                                  "Os marcadores são um guia de referência rápido para suas passagens favoritas ou para o último capítulo que você leu em determinado livro. Para adicionar um marcador, selecione um versículo no leitor da Bíblia e selecione o botão Selecionado na parte superior do leitor."
@@ -363,10 +372,10 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
     loading:                                    "Carregando seus marcadores..."
   badges:
     earned a badge:                             "Ganhou uma Medalha"
-    my badges:                                  "Minhas Medalhas"
     user badges:                                "Medalhas de %{user}"
   plans:
     title:                                      "Planos de Leitura"
+    browse by category:                         "Browse by Category"
     browse plans:                               "Procurar %{category} Planos"
     all:                                        "Todos"
     all plans:                                  "Todos os Planos"
@@ -454,6 +463,7 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
     which day in plan:                          "Dia %{day} de %{total}"
     must start to complete:                     "Comece este plano para salvar as leituras completadas!"
   registration:
+    with facebook:                              "Sign up with Facebook"
     benefits title:                             "Tenha a Experiência Completa"
     benefits blurb:                             "Criar uma conta no YouVersion te dá acesso a mais recursos, como marcadores e anotações. Eles aparecerão em qualquer dispositivo em que você estiver conectado. Uma conta também facilita o compartilhar da Bíblia com amigos, então utilize um ou dois minutos e inscreva-se!"
     plan blurb:                                 "Parece que você quer iniciar um Plano de Leitura. Muito bem! Os Planos de Leitura podem te ajudar a fazer com que a Bíblia seja uma parte do seu cotidiano. Acesse ou crie uma conta abaixo e comece!"
@@ -478,12 +488,24 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
     all versions:                               "Todas as Versões %{language_name}"
   donate:
     donate now:                                 "Doe Agora"
+    donate now intl:                            "or donate internationally"
     promo 1:                                    "Para cada $1 que você doa, mais 10 pessoas ganham acesso à Bíblia no telefone celular."
     promo 2:                                    "Com o YouVersion, a Bíblia está sempre por perto. Assista nosso vídeo."
     promo 3:                                    "Este ano mais de 5 bilhões de pessoas usarão um telefone celular. Doe agora."
     headline:                                   "Todos precisam da Palavra de Deus."
     subhead:                                    "Ajude as pessoas ao redor do mundo a ter a Bíblia em suas mãos."
     copy:                                       "Imagine se você pudesse dar uma Bíblia gratuita para cada pessoa no mundo. Quando você doa ao YouVersion, você está fazendo isso. Nós vivemos em um tempo em que outros apenas sonharam &ndash; em que qualquer um com um celular pode acessar a Bíblia e vivenciar a história do amor de Deus por nós. Com sua ajuda, nós podemos continuar a ajudar mais pessoas a passarem mais tempo com as Escrituras."
+    amount:                                     "Donation amount (USD)"
+    name:                                       "Your name"
+    card number:                                "Credit card number"
+    card exp date:                              "Expiration date (MMYY)"
+    receipt:                                    "Email me a copy of my receipt."
+    preview:                                    "Preview Donation"
+    header copy:                                "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Please fill out the form below to make your donation. We'll collect payment info on the next screen."
+    header confirm copy:                        "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Click Donate Now to make your donation."
+    donate now button:                          "Doe Agora"
+    email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
+    email footer:                               "Your donation will help people around the world fall in love with God's Word."
   download ad:
     title:                                      "Baixe o App gratuito da Bíblia"
     line 1:                                     "Centenas de versões em muitos"
@@ -550,3 +572,24 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
     symbian:                                    "Symbian"
     mobile web:                                 "Web Móvel"
     amazon:                                     "Kindle Fire"
+  pages:
+    generic_error:
+      title:                                    "Oops!"
+      explanation:                              "Something went wrong behind the scenes! You can try again by reloading the page, we're very sorry for the inconvenience!"
+      our action:                               "We've been notified about this and will jump on it as soon as possible."
+  shared:
+    menu_settings:
+        title:                                  "Your Settings"
+        close:                                  "Fechar"
+        font:                                   "Font:"
+        font1:                                  "Helvetica"
+        font2:                                  "Georgia"
+        font3:                                  "Baskerville"
+        font4:                                  "Verdana"
+        font size:                              "Size:"
+        small:                                  "Pequeno"
+        medium:                                 "Médio"
+        large:                                  "Grande"
+        highlights:                             "Highlights:"
+        on:                                     "On"
+        off:                                    "Off"
