--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -84,7 +84,7 @@ zh-CN:
   privacy policy:                               "隐私条例"
   terms:                                        "条款"
   press:                                        "新闻"
-  get support:                                  "支持"
+  get support:                                  "服务支持"
   donate title:                                 "奉献"
   choose language field:                        "选择您的语言:"
   settings:                                     "设置"
@@ -126,6 +126,9 @@ zh-CN:
     like button text:                           "喜欢"
     unlike button text:                         "不喜欢"
   notes:
+    public:                                     "公开"
+    private:                                    "不公开"
+    draft:                                      "草稿"
     creation form errors:                       "以下错误使您不能记笔记："
     status field:                               "Status:"
     reference field:                            "经节："
@@ -170,6 +173,8 @@ zh-CN:
     select another chapter:                     "选择另外的章节"
     view in reader:                             "在阅读版面查看%{reference}"
   users:
+    settings:                                   "设置"
+    no connection friends:                      "您在 %{connection} 的朋友还没有人在YouVersion上出现。"
     creation form errors:                       "以下错误阻止您创建帐号："
     profile form errors:                        "以下错误阻止您更新个人资料:"
     email address:                              "电子邮件地址"
@@ -188,6 +193,7 @@ zh-CN:
     following title:                            "我关注的人"
     user does not follow you:                   "%{user}没有关注你。"
     recent activity:                            "最近活动"
+    my recent_activity:                         "我的近期记录"
     started following:                          "开始关注"
     subscribed to plan:                         "用户订阅了 %{plan} 。"
     reading:                                    "阅读此计划的用戶。"    
@@ -203,7 +209,6 @@ zh-CN:
     edit notifications:                         "管理通知"
     edit connections:                           "连接的帐号"
     edit devices:                               "连接的设备"
-    my recent activity:                         "我最近的活动"
     user recent activity:                       "%{user}最近的活动"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}的笔记"
@@ -214,12 +219,14 @@ zh-CN:
     user bookmarks:                             "%{user}的书签"
     my likes:                                   "我喜欢的"
     user likes:                                 "%{user}所喜欢的"
+    my badges:                                  "我的徽章"
     revised date:                               "最后一次修改在%{date}"
     update email copy:                          "输入一个新的电邮地址再点击『更新电邮』键。我们将发送一个链接给您来确认您的新电邮地址。"
-    update email button:                        "更新电邮"
+    edit email:                                 "更新电邮"
     update email check:                         "请查看您的电邮并点击链接来确认您的新电邮地址。"
     confirm update email success:               "谢谢！您已经成功更新了你的电邮地址。"
     confirm update email error:                 "很抱歉，无法更改您的电子邮件！"
+    account confirmed:                          "您的帐户已经验证成功！"
     invalid email forgot:                       "抱歉，没有找到与该电子邮件地址关联的帐户。请再尝试。"
     send new password button:                   "发送新密码"
     forgot password copy:                       "输入您的电邮地址并点击『发送新密码』，我们将会电邮一个新的密码给您。"
@@ -348,8 +355,11 @@ zh-CN:
       reading_plans:                            "如果有关于我已开始的读经计划的信息，通知我。"
       update:                                   "更新通知"
   bookmarks:
+    edit:                                       "编辑"
+    delete:                                     "删除书签"
     title field:                                "标题"
     lables:                                     "标签"
+    all:                                        "所有笔记"
     labels label:                               "标签："
     title:                                      "书签"
     not found:                                  "书签能使您记住上次阅读的地方，快递地查询到您喜欢的章节或一本书中您上次阅读的章节。添加书签的方法是在圣经阅读器中选择一节，然后点击书签按钮即可。"
@@ -362,10 +372,10 @@ zh-CN:
     loading:                                    "正在载入您的书签..."
   badges:
     earned a badge:                             "赢得了一个徽章"
-    my badges:                                  "我的徽章"
     user badges:                                "%{user}的徽章"
   plans:
     title:                                      "读经计划"
+    browse by category:                         "分目录浏览"
     browse plans:                               "浏览%{category}计划"
     all:                                        "全部"
     all plans:                                  "全部读经计划"
@@ -408,7 +418,7 @@ zh-CN:
     do you want to reset:                       "希望重头再来？"
     catch up text:                              "将今天的阅读改为您上次完成的阅读（计划的第%{last_completed_day}天）。"
     catch up description only:                  "如果您的阅读进度滞后了，不用担心！您始终可以将现在的阅读转到您上次完成的阅读。"
-    catch me up:                                "追上我哦"
+    catch me up:                                "帮我跟上进度"
     restart description:                        "您可以重新开始您的计划。您的所有阅读历史和进度都将被重置到初始状态。"
     restart:                                    "重启计划"
     privacy description:                        "请选择：您是否希望他人看到您的读经计划？"
@@ -453,6 +463,7 @@ zh-CN:
     which day in plan:                          "%{total}天中的第%{day}天"
     must start to complete:                     "请开始这个读经计划来保存已完成的读经！"
   registration:
+    with facebook:                              "通过Facebook帐户注册"
     benefits title:                             "获取完整的体验"
     benefits blurb:                             "花一两分钟去创建YouVersion账户吧！它可以让你使用很多诸如书签和笔记等这些只有在登录后才能使用的功能。创建帐户还可以让您更方便地和朋友分享圣经！"
     plan blurb:                                 "看来您想开始一个读经计划！明智之举！读经计划可以帮助您，使圣经成为您日常生活中的一部分。赶紧登入或创建一个帐号就可以开始了！"
@@ -477,12 +488,24 @@ zh-CN:
     all versions:                               "所有%{language_name}版本"
   donate:
     donate now:                                 "现在就捐赠"
+    donate now intl:                            "或者国际捐赠"
     promo 1:                                    "您每捐出一美元，就能多十个人在他/她们的手机上阅读圣经。"
     promo 2:                                    "有了YouVersion，圣经始终在您身边。观看我们的录像。"
     promo 3:                                    "今年将有50亿人使用手机。现在就捐献！"
     headline:                                   "所有人都需要上帝的话语。"
     subhead:                                    "帮助世界各地的人，让他们可以随时获得圣经"
     copy:                                       "想象一下如果您能够给世界上的每一个人一本免费的圣经。当您捐献给YouVersion 的时候，您就做到了。我们活在一个别人只能想象的时代 &ndash; 每个有手机的人都能够读到圣经并且经历上帝对我们的爱。有您的支持，我们将继续帮助更多的人花更多时间读经。"
+    amount:                                     "捐赠金额(美元)"
+    name:                                       "您的名字"
+    card number:                                "信用卡号"
+    card exp date:                              "过期日期(MM/YY)"
+    receipt:                                    "给我电邮收据副本"
+    preview:                                    "预览捐赠"
+    header copy:                                "让我们一起成为历史上最喜爱圣经的一代。您的支持意味着人们可以在前所未有的更多的平台、用更多的语言、在更多的版本中、以及更多的国家中，打开神的道（话语），。请填写如下表格进行捐赠。我们将在下一屏手机您的付款信息。"
+    header confirm copy:                        "让我们一起成为历史上最喜爱圣经的一代。您的支持意味着人们可以在前所未有的更多的平台、用更多的语言、在更多的版本中、以及更多的国家中，打开神的道（话语），。请填写如下表格进行捐赠。我们将在下一屏手机您的付款信息。"
+    donate now button:                          "现在就捐赠"
+    email header:                               "YouVersion，LifeChurch.tv的一个事工，已经收到了您的捐赠。除了无比的宗教的益处，您的捐赠没有任何的产品或者服务作为交换。若有问题请联系 giving@lifechurch.tv。"
+    email footer:                               "您的捐赠竟会帮助全世界所有热爱神的道的人。"
   download ad:
     title:                                      "免费下载圣经软件"
     line 1:                                     "几百种不同版本的选择"
@@ -549,3 +572,24 @@ zh-CN:
     symbian:                                    "Symbian"
     mobile web:                                 "移动网络"
     amazon:                                     "Kindle Fire"
+  pages:
+    generic_error:
+      title:                                    "对不起，访问的资源不存在"
+      explanation:                              "对不起，系统出现故障，请尝试重新载入页面。"
+      our action:                               "我们已收到，将会尽快解决该问题。"
+  shared:
+    menu_settings:
+        title:                                  "设置"
+        close:                                  "关闭"
+        font:                                   "字体"
+        font1:                                  "出版字体"
+        font2:                                  "美国佐治亚州"
+        font3:                                  "巴斯克维尔字体"
+        font4:                                  "微软字体"
+        font size:                              "大小"
+        small:                                  "小"
+        medium:                                 "中"
+        large:                                  "大"
+        highlights:                             "高亮"
+        on:                                     "打开"
+        off:                                    "关上"
