--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -377,7 +377,8 @@ en:
     title:                                      "Reading Plans"
     browse by category:                         "Browse by Category"
     browse plans:                               "Browse %{category} Plans"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a> instead...)"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Showing only plans available in %{lang_name}"
     all:                                        "All"
     all plans:                                  "All Plans"
     all category plans:                         "All %{category} Plans"
