--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -378,7 +378,7 @@ en:
     browse by category:                         "Browse by Category"
     browse plans:                               "Browse %{category} Plans"
     swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Showing only plans available in %{lang_name}"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "All"
     all plans:                                  "All Plans"
     all category plans:                         "All %{category} Plans"
