--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,7 +34,7 @@ es:
   user follows:                                 "%{user} está siguiendole a usted."
   user does not follow:                         "%{user} no le sigue a usted"
   no following found self:                      "Usted no está siguiendo a nadie aún. Visite la pagina <a href='%{link}'> Encontrar amigos </ a> y encuentre a algunos amigos!"
-  no followers found self:                      "Usted no tiene seguidores aún. Visite la pagina <a href='%{link}'> Encontrar amigos </ a> y encuentre a algunos amigos!"
+  no followers found self:                      "Obtenida por %{username} %{ago} hace"
   no followers found other:                     "Nadie está siguiendo a %{username} aún."
   no following found other:                     "%{username} no está siguiendo a nadie aún."
   no likes found:                               "%{username) no le ha gustado nada aún."
@@ -379,7 +379,7 @@ es:
     browse plans:                               "Buscar %{category} planes"
     all:                                        "Todo"
     all plans:                                  "Todos los planes"
-    all category plans:                         "Todos %{category} los planes"
+    all category plans:                         "Todos los %{category} planes"
     my plans:                                   "Mis Planes"
     none found:                                 "No hemos podido encontrar un plan que coincida con sus criterios. Intente ampliar su búsqueda."
     about publisher:                            "Acerca del editor"
